# cell_classiffication

./: .gitignore  README.md  main.py  params.yml  pyproject.toml
notebooks/: monai_EfficientNet-B0-B3.ipynb  monai_EfficientNet_B3_classes.ipynb  monai_EfficientNet_B3_classes_copy.ipynb  monai_test01.ipynb  pdb_chem05_2025_Docking_GNINA_Humans.ipynb
notebooks_draft/: Cellpose_2D_run_on_local_environment.ipynb  cel_Alexnet pytorch - scheduler - learning rate decay_filtered_Only_Side.ipynb  cell_resnet pytorch - scheduler - learning rate decay_filtered_Feb_April_top_good.ipynb  cell_resnet pytorch - scheduler - learning rate decay_filtered_negative.ipynb  cell_resnet pytorch - scheduler - learning rate decay_filtered_negative_v2.ipynb  cellpose_02_cut_squares.ipynb  cellpose_03_create_crop_images.ipynb  cellpose_03_create_ensemble.ipynb  cellpose_04_create_crop_ensemble.ipynb  cellpose_05_classifier01.ipynb  cellpose_test01.ipynb  cellpose_test01_study_call_py (copy).ipynb  cellpose_test02_cut_squares.ipynb  cellpose_test02_cut_squares_see_image.ipynb  cellpose_test_matrix_calculus.ipynb  create_dic_plate.ipynb  crop01_create_ensemble.ipynb  crop2_resnet18_class.ipynb  crop_resnet18.ipynb  crop_resnet18_class.ipynb  monai_DenseNet121.ipynb  monai_ViT.ipynb  random walk.ipynb  resnet_test.ipynb  run_Cellpose-SAM.ipynb  run_cellpose_fp32.py  test_Cellpose-SAM.ipynb  torch_device.ipynb  train_Cellpose-SAM.ipynb  wil_cellpose_03_create_crop_images.ipynb  will_test_cellpose-Copy1.ipynb  will_test_cellpose.ipynb
src/docking_gnina/: image_lib.py  neural_network_lib.py
(+1 files in other folders)
